[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stupidwalletapi"
version = "1.0.0"
authors = [
  { name = "Penggrin", email = "miner.sidor@gmail.com" },
  { name = "MIPOHBOPOHIH", email = "voroninmiron07@gmail.com" },
]
description = "Python StupidWallet API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/penggrin12/stupidwalletapi"
